[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Shell.gd" type="Script" id=1]
[ext_resource path="res://Sprites/shell_tropical.png" type="Texture" id=2]
[ext_resource path="res://Sprites/shell_swap_arrow_glow.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 33.4425

[sub_resource type="CircleShape2D" id=2]
radius = 18.0198

[sub_resource type="CircleShape2D" id=3]
radius = 200.0

[node name="Shell" type="KinematicBody2D" groups=[
"shell",
]]
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
z_index = -10
shape = SubResource( 1 )

[node name="SmallCollider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 27, -21 )
z_index = -10
shape = SubResource( 2 )
disabled = true

[node name="RayDown" type="RayCast2D" parent="."]
enabled = true

[node name="RayFloor" type="RayCast2D" parent="."]
enabled = true

[node name="FlipTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
z_index = -10
shape = SubResource( 3 )
disabled = true

[node name="CrabContainer" type="Node2D" parent="."]

[node name="ShellSprite" type="Sprite" parent="CrabContainer"]
scale = Vector2( 0.25, 0.25 )
z_index = 5
texture = ExtResource( 2 )
offset = Vector2( 27, -37 )

[node name="Sprite" type="Sprite" parent="CrabContainer"]
visible = false
position = Vector2( 7, -36 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="BoostTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="timeout" from="FlipTimer" to="." method="_on_FlipTimer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="BoostTimer" to="." method="_on_BoostTimer_timeout"]
